Fix title hover on mobile

--- a/src/components/home/title.module.css
+++ b/src/components/home/title.module.css
@@ -90,4 +90,16 @@
     justify-content: center;
     font-size: 3em;
   }
+
+  .links a:after {
+    top: 50%;
+    left: 50%;
+    width: 80px;
+    height: 80px;
+    transform-origin: -50% -50%;
+  }
+
+  .links a:hover:after {
+    transform: scale(1) translate(-50%, -50%);
+  }
 }
